@@ -593,7 +593,7 @@ const liberator = (function () //{{{
 
         triggerCallback: function (type, mode, data)
         {
-            //liberator.dump("type: " + type + " mode: " + mode + "data: " + data + "\n");
+            // liberator.dump("type: " + type + " mode: " + mode + "data: " + data + "\n");
             for (let i = 0; i < callbacks.length; i++)
             {
                 var [thistype, thismode, thisfunc] = callbacks[i];
